--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <canvas id="harddark"></canvas>
-    <img id="drdarkstarpng" src="/renavania1.png" alt="" srcset="">
+    <img id="drdarkstarpng" src="/assets/renavania1.png" alt="" srcset="">
     <script type="module" src="/darkmagic.js"></script>
 </body>
 </html>
